--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -35,8 +35,9 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 1
+    patch: 2
   description: A plugin to add Google Maps to a site
+  documentation: "https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/readme.md" 
   website:
     name: Google Maps Plugin
     url: https://github.com/craftercms/googlemaps-plugin
