--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -35,7 +35,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 7
+    patch: 8
   description: A plugin to add Google Maps to a site
   documentation: "https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/readme.md"
   website:
@@ -67,3 +67,7 @@ plugin:
   crafterCmsEditions:
     - community
     - enterprise
+  parameters:
+    - label: API Key
+      name: apiKey
+      description: The Google API Key
