--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -1,6 +1,6 @@
 # MIT License
 #
-# Copyright (c) 2018-2021 Crafter Software Corporation. All Rights Reserved.
+# Copyright (c) 2018-2022 Crafter Software Corporation. All Rights Reserved.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -35,7 +35,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 8
+    patch: 9
   description: A plugin to add Google Maps to a site
   documentation: "https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/readme.md"
   website:
@@ -51,12 +51,9 @@ plugin:
         url: https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/.crafter/screenshots/place.png
   developer:
     company:
-      name: Crafter Software
-      email: info@craftersoftware.com
-      url: https://craftersoftware.com
-  build:
-    id: c3d2a5444e6a24b5e0481d6ba87901d0b02716c8
-    date: 2021-07-30T00:00:00Z
+      name: CrafterCMS
+      email: info@craftercms.com
+      url: https://craftercms.com
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
