--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -35,7 +35,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 16
+    patch: 17
   description: A plugin to add Google Maps to a site
   documentation: "https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/readme.md"
   website:
@@ -79,6 +79,18 @@ plugin:
     - major: 4
       minor: 0
       patch: 6
+    - major: 4
+      minor: 0
+      patch: 7
+    - major: 4
+      minor: 0
+      patch: 8
+    - major: 4
+      minor: 0
+      patch: 9
+    - major: 4
+      minor: 0
+      patch: 10
     - major: 4
       minor: 1
       patch: 0
