--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -35,7 +35,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 18
+    patch: 19
   description: A plugin to add Google Maps to a site
   documentation: "https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/readme.md"
   website:
@@ -85,6 +85,18 @@ plugin:
     - major: 4
       minor: 0
       patch: 8
+    - major: 4
+      minor: 1
+      patch: 9
+    - major: 4
+      minor: 1
+      patch: 10
+    - major: 4
+      minor: 1
+      patch: 11
+    - major: 4
+      minor: 1
+      patch: 12
     - major: 4
       minor: 0
       patch: 9
