--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -35,7 +35,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 22
+    patch: 23
   description: A plugin to add Google Maps to a site
   documentation: "https://raw.githubusercontent.com/craftercms/googlemaps-plugin/master/readme.md"
   website:
@@ -68,6 +68,8 @@ plugin:
       minor: 3
     - major: 4
       minor: 4
+    - major: 4
+      minor: 5
     - major: 5
       minor: 0
   crafterCmsEditions:
